# b2b-radar

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_filter_settings_table.py  b2c3d4e5f6a7_add_source_ingest_status.py  e8132e591740_add_document_and_source_tables.py  fe88a682b292_add_youtube_api_keys_table.py
src/: config.py  pipeline.py
src/domain/: Source.py  api_key.py  document.py  filter_settings.py  source.py
src/infrastructure/api/: youtube.py
src/infrastructure/db/: models.py  repositories.py  session.py
src/infrastructure/extractor/: base.py  quality.py  youtube.py
src/web/: app.py  dependencies.py  formatting.py  nav.py  templating.py
src/web/routers/: api_keys.py  dashboard.py  documents.py  settings.py  sources.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: _replies.html  api_keys.html  base.html  dashboard.html  documents.html  settings.html  source_detail.html  sources.html
