[project]
name = "b2b-radar"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "google-api-python-client",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "python-dotenv>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
    "dist",
    "migrations",
]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "CPY001",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D205",
    "FBT001", "FBT002",
    "ERA001"
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]
"scripts/*" = ["T201", "INP001", "RUF001"]
"src/infrastructure/db/repositories.py" = ["PLR0913"]
"src/web/routers/*" = ["PLR0913"]

[tool.mypy]
strict = true
python_version = "3.12"

exclude = [
    'venv',
    '.venv',
    'tests',
    'migrations',
]

warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true